# python-modelcif

./: .appveyor.yml  CITATION.cff  ChangeLog.rst  MANIFEST.in  README.md  make-release.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  todo
.github/workflows/: codeql-analysis.yml  linter.yml  testpy.yml
docs/: alignment.rst  associated.rst  changes.rst  conf.py  data.rst  descriptor.py  dumper.rst  index.rst  introduction.rst  limitations.rst  main.rst  model.rst  protocol.rst  qa_metric.rst  reader.rst  reference.rst  requirements.txt  usage.rst
examples/: README.md  associated.py  convert_bcif.py  ligands.py  mkmodbase.py  validate_mmcif.py  validate_modbase.py
examples/input/: ligands.cif
ihm/: __init__.py  dumper.py  reader.py  reference.py
ma/: __init__.py  alignment.py  citations.py  data.py  dumper.py  model.py  protocol.py  qa_metric.py  reader.py  reference.py
modelcif/: __init__.py  alignment.py  associated.py  data.py  descriptor.py  dumper.py  model.py  protocol.py  qa_metric.py  reader.py  reference.py  test.py
modelcif/util/: make_mmcif.py
test/: test_alignment.py  test_associated.py  test_descriptor.py  test_dumper.py  test_edit.py  test_examples.py  test_ma_citations.py  test_ma_dumper.py  test_ma_main.py  test_ma_reader.py  test_main.py  test_make_mmcif.py  test_model.py  test_qa_metric.py  test_reader.py  test_reference.py
test/input/: not_modeled.cif
util/: check-db-entries.py  make-mmcif.py  python-modelcif.spec  validate-outputs.py
