[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcif"
version = "1.4"
requires-python = ">=3.6"
authors = [
    {name="Ben Webb", email="ben@salilab.org"}
]
readme = "README.md"
description = 'Package for handling ModelCIF mmCIF and BinaryCIF files'
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = ['ihm>=2.6']

[project.urls]
homepage = 'https://github.com/ihmwg/python-modelcif'
repository = 'https://github.com/ihmwg/python-modelcif'
documentation = 'https://python-modelcif.readthedocs.io/'
issues = 'https://github.com/ihmwg/python-modelcif/issues/'
changelog = 'https://github.com/ihmwg/python-modelcif/blob/main/ChangeLog.rst'

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402"]

[tool.setuptools]
packages = ['modelcif', 'modelcif.util']
